nginx-ingress/datadog-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datadog-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datadog-app-frontend
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: datadog-app-views
                port:
                  number: 80
